[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = "2.0.1"

[[example]]
name = "training"
path = "src/training_file.rs"
